--- a/src/pages/drugs/drugs.html
+++ b/src/pages/drugs/drugs.html
@@ -5,22 +5,19 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Drugs</ion-title>
+    <ion-title>
+      DateTime
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content class="outer-content my">
+  <div style='border:solid 1px #000;width:50px;height:30px;' >
+      <button id='button1' (click)='add()'>111111</button>
+      <ion-datetime displayFormat="MMM DD YYYY" [(ngModel)]="event.month">1111</ion-datetime>
+ </div>
 
-<ion-content padding>
-    <ion-fab>
-        <button ion-fab mini><ion-icon name="ios-more-outline"></ion-icon></button>
-        <ion-fab-list side='right'>
-          <button ion-fab><ion-icon name="logo-facebook"></ion-icon></button>
-          <button ion-fab><ion-icon name="logo-twitter"></ion-icon></button>
-          <button ion-fab><ion-icon name="logo-vimeo"></ion-icon></button>
-        </ion-fab-list>
-    </ion-fab>
+    <button  (click)='delete()'>22222</button>
 
 </ion-content>
